[project]
name = "wyoming-piper"
version = "1.5.3"
description = "Wyoming Server for Piper"
readme = "README.md"
requires-python = ">=3.8.1,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"}
]
keywords = ["rhasspy", "wyoming", "piper", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "wyoming>=1.5.3",
]

[project.urls]
Homepage = "http://github.com/rhasspy/wyoming-piper"

[project.scripts]
wyoming-piper = "wyoming_piper.__main__:run"

[tool.setuptools.packages.find]
include = ["wyoming_piper"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
wyoming_piper = ["voices.json"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "black==22.12.0",
    "flake8==6.0.0",
    "isort==5.11.3",
    "mypy==0.991",
    "pylint==2.15.9",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "build==1.2.2.post1",
    "scipy>=1.10,<2",
    "numpy>=1.20,<2",
    "python-speech-features==0.6",
]
