[project]
name = "wyoming-piper"
version = "2.0.0"
description = "Wyoming Server for Piper"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"}
]
keywords = ["rhasspy", "wyoming", "piper", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wyoming>=1.7.2,<1.8",
    "regex==2024.11.6",
    "piper-tts==1.3.0",
    "sentence-stream==1.2.0",
]

[project.urls]
Homepage = "http://github.com/rhasspy/wyoming-piper"

[project.scripts]
wyoming-piper = "wyoming_piper.__main__:run"

[tool.setuptools.packages.find]
include = ["wyoming_piper"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
wyoming_piper = ["voices.json"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.1.1",
    "mypy==1.14.0",
    "pylint==3.2.7",
    "pytest==8.3.4",
    "pytest-asyncio==1.1.0",
    "build==1.2.2",
    "scipy>=1.10,<2",
    "numpy>=1.20,<2",
    "python-speech-features==0.6",
]
